--- a/sample_run.ipynb
+++ b/sample_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -16,17 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters:\n",
     "coll_name = 'ailey-dev'\n",
-    "exp_name = 'Insula_Atenolol-1_171204_new'\n",
+    "exp_name = 'DRN-BLA_2378'\n",
     "chan_name = 'Ch0'\n",
-    "x_rng = [330, 550]\n",
-    "y_rng = [650, 1000]\n",
-    "z_rng = [280, 630]\n",
+    "x_rng = [9250, 9750]\n",
+    "y_rng = [18000, 18500]\n",
+    "z_rng = [500, 600]\n",
     "test_lbl = '4'\n",
     "\n",
     "# Using bossHandler class to download from Boss:\n",
@@ -549,21 +549,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
