--- a/sample_run.ipynb
+++ b/sample_run.ipynb
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labeled_0_nz_voxel_ids = np.genfromtxt('../../../annotation_csv/tractography/tractography_'+test_lbl+'.swc' , delimiter=' ')\n",
+    "labeled_0_nz_voxel_ids = np.genfromtxt('./doc/tractography_'+test_lbl+'.swc' , delimiter=' ')\n",
     "labeled_0_nz_voxel_ids = np.around(np.uint16(labeled_0_nz_voxel_ids[:,2:5]))\n",
     "labeled_0_nz_voxel_ids = labeled_0_nz_voxel_ids[:, [1,0,2]]\n",
     "nz_skeleton = np.asarray(np.nonzero(skeleton)).T\n",
