--- a/sample_run.ipynb
+++ b/sample_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +101,8 @@
     "    return ax1\n",
     "\n",
     "anim = animation.FuncAnimation(fig, animate, frames = np.arange(z_rng[0],z_rng[1]), interval = 50)\n",
+    "\n",
+    "anim = videoviz(data_cutout_raw, skeleton)\n",
     "HTML(anim.to_jshtml())\n"
    ]
   },
@@ -135,17 +137,17 @@
     "\n",
     "\n",
     "        \n",
-    "x_rng = [330, 550]\n",
-    "y_rng = [650, 1000]\n",
-    "z_rng = [480, 630]\n",
+    "x_rng = [9250, 9750]\n",
+    "y_rng = [18000, 18500]\n",
+    "z_rng = [500, 600]\n",
     "        \n",
     "sub_vol = 255*np.uint16(binary_dilation(concomp, np.ones((5,5,5))))\n",
     "sub_vol = np.transpose(sub_vol , (2,0,1))\n",
     "# Ingest the results back to Boss\n",
     "rmt = BossRemote()\n",
-    "new_coll_name = 'cell_detection'\n",
-    "new_exp_name = 'Atenolol1_COBALT'\n",
-    "new_chan_name = 'ndtractography'\n",
+    "new_coll_name = 'tractography'\n",
+    "new_exp_name = 'DRN-BLA_2378'\n",
+    "new_chan_name = 'Ch0'\n",
     "create_new_channel = False\n",
     "\n",
     "if create_new_channel:\n",
@@ -176,36 +178,7 @@
    "outputs": [],
    "source": [
     "labeled_0_nz_voxel_ids = np.genfromtxt('./doc/tractography_'+test_lbl+'.swc' , delimiter=' ')\n",
-    "labeled_0_nz_voxel_ids = np.around(np.uint16(labeled_0_nz_voxel_ids[:,2:5]))\n",
-    "labeled_0_nz_voxel_ids = labeled_0_nz_voxel_ids[:, [1,0,2]]\n",
-    "nz_skeleton = np.asarray(np.nonzero(skeleton)).T\n",
-    "\n",
-    "# physical sizes:\n",
-    "x_size = 0.585 #um\n",
-    "y_size = 0.585 #um\n",
-    "z_size = 5.0 #um\n",
-    "method = 'm2l' #m2l (for each machine labled find the closest manual labels) or \n",
-    "               #l2m (for each manual labeled find the closest machine labeled)\n",
-    "\n",
-    "nz_test_data = np.asarray(np.nonzero(skeleton)).T\n",
-    "if method == 'm2l':\n",
-    "    closest_voxels = th.quantify(nz_skeleton, labeled_0_nz_voxel_ids)\n",
-    "    subtrct = closest_voxels - nz_skeleton\n",
-    "elif method == 'l2m':\n",
-    "    closest_voxels = th.quantify(labeled_0_nz_voxel_ids, nz_skeleton)\n",
-    "    subtrct = closest_voxels - labeled_0_nz_voxel_ids\n",
-    "    \n",
-    "distances = np.linalg.norm(subtrct.dot(np.diag([x_size, y_size, z_size])), axis = 1)\n",
-    "binSize = 12.5 #um\n",
-    "nbins = np.uint32(np.around((np.max(distances) - np.min(distances))/12.5))\n",
-    "\n",
-    "histret=plt.hist(distances, bins=nbins, weights=np.zeros_like(distances) + 1. / distances.size )\n",
-    "plt.xlabel((\n",
-    "    'Machine labeled' if method == 'm2l' else 'Manual labled' ) + ' voxels\\' distance from closest point in ' + (\n",
-    "    'manual labeled data (um)' if method == 'm2l' else 'machine labeled data (um)'))\n",
-    "plt.ylabel('Relative count')\n",
-    "plt.title('Histogram of physical distances; Bin size = ' + str(binSize) + ' um')\n",
-    "print(closest_voxels.shape)\n"
+    "plot_quantification('./doc/tractography_'+test_lbl+'.swc',skeleton, 0.585, 0.585, 5.0)\n"
    ]
   },
   {
