fixed directory bug

--- a/sample_run.ipynb
+++ b/sample_run.ipynb
@@ -157,6 +157,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "if not os.path.exists('output'):\n",
+    "    os.makedirs('output')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
